--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<div class="templates">
+		<dl class="result answers">
+			<!-- <p></p>
+			<dt>Question</dt>
+				<dd class="question-text"><a href="" target="_blank"></a></dd> -->
+			<dt>Feels like</dt>
+				<dd class="user"></dd>
+			<dt>Wind</dt>
+				<dd class="reputation"></dd>
+			<dt>Score for this tag</dt>
+				<dd class="score"></dd>
+			<dt>Post Count for this tag</dt>
+			<dd class="posts"></dd>
+			<dt>Type of User</dt>
+			<dd class="type"></dd>
+		</dl>
+		<!-- <div class="error">
+			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
+		</div> -->
+	</div>
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
