other stuff to be added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 				<dd class="question-text"><a href="" target="_blank"></a></dd> -->
 			<dt>Feels like</dt>
 				<dd class="user"></dd>
-			<dt>Wind</dt>
+			<dt>Wind Speed</dt>
 				<dd class="reputation"></dd>
-			<dt>Score for this tag</dt>
+			<dt>Wind Desc</dt>
 				<dd class="score"></dd>
-			<dt>Post Count for this tag</dt>
+			<dt>Humidity</dt>
 			<dd class="posts"></dd>
 			<dt>Type of User</dt>
 			<dd class="type"></dd>
