--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 				<dd class="user"></dd>
 			<dt>Wind Speed</dt>
 				<dd class="reputation"></dd>
-			<dt>Wind Desc</dt>
+			<dt>Humidity</dt>
 				<dd class="score"></dd>
 			<dt>Humidity</dt>
 			<dd class="posts"></dd>
-			<dt>Type of User</dt>
-			<dd class="type"></dd>
 		</dl>
 		<!-- <div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
