add raw time for now

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<dd class="reputation"></dd>
 			<dt>Humidity</dt>
 				<dd class="score"></dd>
-			<dt>Humidity</dt>
+			<dt>Updated</dt>
 			<dd class="posts"></dd>
 		</dl>
 		<!-- <div class="error">
