--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Weather-yo</title>
+	<title>Weatheryo</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1>Weather-yo</h1>
+	<h1>Weatheryo</h1>
 	<div class="templates">
 		<dl class="result answers">
 			<!-- <p></p>
