comment some stuff out

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Weatheryo</h1>
-	<div class="templates">
+	<div class="templates hidden">
 		<dl class="result answers">
 			<!-- <p></p>
 			<dt>Question</dt>
