prep to display forecast

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 			<dt>Updated</dt>
 			<dd class="posts"></dd>
 		</dl>
+		<div class="templates hidden">
+			<div class="forecast">
+
+			</div>
 		<!-- <div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div> -->
