tryigng to get some forecast data to show in view

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		</dl>
 		<div class="templates hidden">
 			<div class="forecast">
-
+				<p class="one_day"></p>
+				<p class="two_day"></p>
 			</div>
 		<!-- <div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
