order of data in view good for mobile

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<dt>Updated</dt>
 			<dd class="posts"></dd>
 		</dl>
+	</div>
 		<div class="templates hidden">
 			<div class="forecast">
 				<p class="one_day"></p>
