--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<h1>Weatheryo</h1>
-	<div class="templates hidden">
+	<div class="container">
+		<div class="templates hidden">
 		<dl class="result answers">
 			<!-- <p></p>
 			<dt>Question</dt>
@@ -32,6 +33,8 @@
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div> -->
 	</div>
+	</div>
+
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
