adjust look, primarily for mobile

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			<!-- <p></p>
 			<dt>Question</dt>
 				<dd class="question-text"><a href="" target="_blank"></a></dd> -->
-			<dt>Feels like</dt>
+			<dt>Feels like:</dt>
 				<dd class="user"></dd>
-			<dt>Wind Speed</dt>
+			<dt>Wind Speed:</dt>
 				<dd class="reputation"></dd>
-			<dt>Humidity</dt>
+			<dt>Humidity:</dt>
 				<dd class="score"></dd>
-			<dt>Updated</dt>
+			<dt>Updated:</dt>
 			<dd class="posts"></dd>
 		</dl>
 	</div>
