trying diff font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Weatheryo</title>
+	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
 				<dd class="question-text"><a href="" target="_blank"></a></dd> -->
 			<dt>Feels like:</dt>
 				<dd class="user"></dd>
-			<dt>Wind Speed:</dt>
+			<dt>Wind:</dt>
 				<dd class="reputation"></dd>
 			<dt>Humidity:</dt>
 				<dd class="score"></dd>
