--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<!-- <p></p>
 			<dt>Question</dt>
 				<dd class="question-text"><a href="" target="_blank"></a></dd> -->
-			<dt>Feels like:</dt>
+			<dt>Temp:</dt>
 				<dd class="user"></dd>
 			<dt>Wind:</dt>
 				<dd class="reputation"></dd>
