allow user to get current weather for diff locations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>Weatheryo</h1>
 	<form >
-		<input type="text" placeholder="e.g., jQuery" name="answerers" size="30"  required>
+		<input type="text" placeholder="Enter City" name="answerers" size="30"  required>
 		<select name="state" size="1">
   <option value="AK">AK</option>
   <option value="AL">AL</option>
