adjust feels like

--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
 		<input type="submit" value="Submit">
 	</form>
 	<div class="container">
+		Enter your city and state
 		</div>
 		<div class="templates hidden">
 		<dl class="result answers">
 			<!-- <p></p>
 			<dt>Question</dt>
 				<dd class="question-text"><a href="" target="_blank"></a></dd> -->
-			<dt>Temp:</dt>
+			<dt>Feel:</dt>
 				<dd class="user"></dd>
 			<dt>Wind:</dt>
 				<dd class="reputation"></dd>
