--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<input type="submit" value="Submit">
 	</form>
 	<div class="container">
-		Enter your city and state. Results in your time zone
+		Enter your city and state. Results will be in your time zone
 		</div>
 		<div class="templates hidden">
 		<dl class="result answers">
