--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <option value="WV">WV</option>
   <option value="WY">WY</option>
 </select>
-		<input type="submit" value="Submit">
+		<input type="submit" value="Go">
 	</form>
 	<div class="container">
 		Enter your city and state. Results will be in your time zone
