--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>Weatheryo</h1>
 	<form >
-		<input type="text" placeholder="Enter City" name="answerers" size="20"  required>
+		<input type="text" placeholder="Enter City" name="answerers" size="20" id="tags" required>
 		<select name="state" size="1">
   <option value="AK">AK</option>
   <option value="AL">AL</option>
@@ -96,6 +96,7 @@
 
 
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
