--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
