--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Weatheryo</h1>
-	<form >
+	<form>
 		<input type="text" placeholder="Enter City" name="city" size="20" required>
 		<select name="state" size="1">
   <option value="AK">AK</option>
@@ -66,7 +66,7 @@
 </select>
 		<input type="submit" value="Go">
 	</form>
-	<div class="container">
+	<div class="results-container">
 		Enter your city and state. Results will be in your time zone
 		</div>
 		<div class="templates hidden">
