change class name

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		Enter your city and state. Results will be in your time zone
 		</div>
 		<div class="templates hidden">
-		<dl class="result answers">
+		<dl class="result current-weather">
 			<!-- <p></p>
 			<dt>Question</dt>
 				<dd class="question-text"><a href="" target="_blank"></a></dd> -->
