--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<div class="page-wrap">
     <h1>Weatheryo</h1>
+    <p class="warning">Broken: api has been retired</p>
     <form>
       <input type="text" placeholder="Enter City" name="city" size="24" required>
       <select name="state" size="1">
